--- a/AccountService.API/AccountService.API.csproj
+++ b/AccountService.API/AccountService.API.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\AccountService.Persistence\AccountService.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validators\" />
+  </ItemGroup>
+
 </Project>
